# psychos

./: .coveragerc  .gitignore  .readthedocs.yml  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: codecov.yml  publish.yml  pylint.yml  tests.yml
docs/: Makefile  conf.py  index.rst
docs/content/: core.rst  license.rst  modules.rst  utils.rst  visual.rst
docs/content/autosummary/: psychos.Image.rst  psychos.Text.rst  psychos.Window.rst  psychos.core.Clock.rst  psychos.core.Interval.rst  psychos.core.wait.rst  psychos.utils.color_to_rgba.rst  psychos.utils.color_to_rgba_int.rst  psychos.utils.docstring.rst  psychos.utils.get_screens.rst  psychos.utils.register.rst  psychos.visual.Unit.rst  psychos.visual.get_window.rst  psychos.visual.units.CMUnit.rst  psychos.visual.units.DegUnit.rst  psychos.visual.units.INUnit.rst  psychos.visual.units.MMUnit.rst  psychos.visual.units.NormalizedUnits.rst  psychos.visual.units.PTUnit.rst  psychos.visual.units.PercentageUnit.rst  psychos.visual.units.PixelUnits.rst  psychos.visual.units.VDUnit.rst  psychos.visual.units.VHUnit.rst  psychos.visual.units.VWUnit.rst
psychogui/: __init__.py  __version__.py  types.py
psychogui/utils/: __init__.py
psychogui/visual/: __init__.py  text.py  window.py
psychos/: __init__.py  __version__.py  types.py
psychos/core/: __init__.py  keys.py  time.py
psychos/utils/: __init__.py  colors.py  decorators.py  lazy.py  screens.py
psychos/visual/: __init__.py  image.py  text.py  units.py  window.py
tests/: test_colors.py  test_core_time.py  test_import_module.py  test_utils_lazy.py
